--- a/README
+++ b/README
@@ -8,9 +8,10 @@ Create symlinks:
     ln -s ~/.vim/vimrc ~/.vimrc
     ln -s ~/.vim/gvimrc ~/.gvimrc
 
-Switch to the `~/.vim` directory, and fetch submodules:
+Open vim, and install bundles:
+    
+    vim
+    :BundleInstall
+    :q
 
-    cd ~/.vim
-    git submodule init
-    git submodule update
 ===============README EOF==================
